[gd_scene format=3 uid="uid://c0atl8ffoeq5u"]

[ext_resource type="Script" uid="uid://da7enr8axqhyb" path="res://Interfaces/Menus/MainMenu.gd" id="1_006fw"]
[ext_resource type="Script" uid="uid://cfdlgc8aalbtr" path="res://Interfaces/Elements/GameMenuButton.gd" id="2_1kon5"]

[node name="MainMenu" type="Control" unique_id=2089339401]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_006fw")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=562557462]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_vertical = 2
theme_override_constants/separation = 150

[node name="Control" type="Control" parent="HBoxContainer" unique_id=1620957170]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer" unique_id=1425320903]
custom_minimum_size = Vector2(300, 427)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer" unique_id=1354261490]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Continue" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=455544828]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Exit Game")
focus_neighbor_bottom = NodePath("../New Game")
text = "Continue"
script = ExtResource("2_1kon5")

[node name="New Game" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=1951452282]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Continue")
focus_neighbor_bottom = NodePath("../Options")
text = "New Game"
script = ExtResource("2_1kon5")

[node name="Options" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=1089722731]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../New Game")
focus_neighbor_bottom = NodePath("../Exit Game")
text = "Options"
script = ExtResource("2_1kon5")

[node name="Exit Game" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=248575094]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Continue")
text = "Exit Game"
script = ExtResource("2_1kon5")

[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Exit Game" to="." method="_on_exit_game_pressed"]
